css/style.css
:root {
    --main-color: #F1FAFD;
    --title-font: 'Merriweather', serif;
}
body{
    width: 100vw;
    height: 100vh;
    color: var(--main-color);
}

.card-box {
    /* background-color: darkslategray; */
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 100px;
}

.cards-container {
    display: flex;
    flex-direction: row;
    width: 370vw;
    transform: rotate(90deg) translateY(-100vh);
    transform-origin: top left;
   background-color: var(--main-color);
   
}
.main-container {
    width: 100vh;
    height: 100vw;
    transform: rotate(-90deg) translateX(-100vh);
    transform-origin: top left;
    overflow-x: hidden;
    /* pour ie et mozilla */
    -ms-overlow-style: none;
    scrollbar-width: none;
  
}

.card{
    padding: 1px;
    height: 85%;
    width: 93%;
    border-radius: 60px;
    box-shadow: 0 0 20px black;
    background-image: url("../img/eberhard-grossgasteiger-xC7Ho08RYF4-unsplash.jpg");
    background-size: cover;

}

.mid-section{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 100%;
    width: 40%;
    padding-left: 10%;
   
}


.label-fixed{
    position: absolute;
    left: 0;
    top: 44vh;
    text-orientation: upright;
    writing-mode: vertical-lr;
    transform: translateY(-50%);
}
.label-fixed h3{
    font-family: var(--title-font);
    color: black;
    background-color: #FFD60A;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 25px;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    padding: 0.5rem;
   
}
::-webkit-scrollbar {
    display: none;
}

.one {
    margin-left: 3rem;
    /* background: #2A2A28; */
    position: relative;
}
.one__img__profile{
    width: 15%;
    aspect-ratio: 1/1;
    border-radius: 100%;
    position: absolute;
    top: 3rem;
    right: 9rem;
    box-shadow: 0 0 10px #F1FAFD;
}

.one__section__techno{
    margin-top: 10%;
    width: 100%;
    height: 200%;
    display: flex;
    justify-content: space-evenly;
    font-family: var(--title-font);
    color: var(--main-color);

}

.box-techno{
    height: fit-content;
    width: 17%;
    background-color: rgba(100, 100, 100, 0.2);
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(5px);
    box-shadow: 0 0 2px #F1FAFD;
    border-radius: 25px;
    font-size: 1vw;
    position: relative;
   
}

.box-techno ul{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    height: 100%;
    margin: 1vh;
    gap: 0.8rem;
    margin: 1rem;
   
}

.box-techno ul li{
    /* margin-left: 33%; */
    display: flex;
    align-items: center;
    gap: 1.5rem;
}



.logo-techno{
    height: 2.7vw;
    aspect-ratio: 1/1;
}

.two {
    position: relative;
   display: flex;
   
}
.three {
    position: relative;
    display: flex;
   
}
.four {
    position: relative;
    display: flex;
   
}

header h1{
    margin: 3rem 3rem 2rem 3rem;
    /* font-family: var(--title-font); */
    font-size: 6vw;
    color: var(--main-color);

    font-family: "Anton", sans-serif;
    font-weight: 400;
    font-style: normal;
    letter-spacing: 2px;
}
header h2{
    margin: 0 3rem;
    /* line-height: 2rem; */
    font-family: var(--title-font);
    font-size: 4vw;
    color: var(--main-color);
}

.title-techno{
    position: absolute;
    top: -25px;
    left: 50%;
    font-size: 2rem;
    transform: translate(-50%, -50%);
}


/* titre des cartes */
.title-card{
    font-size: 4vw;
}
.title-card_without-flex{
    margin-top: 10vh;
    margin-left: 8vw;
}
.glass__paragraphe{
    border-radius: 30px;
    background-color: rgba(100, 100, 100, 0.2);
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(5px);
    box-shadow: 0 0 2px #F1FAFD;
    font-size: 1.5rem;
    padding: 2em;

}
.social-list{
    display: flex;
    justify-content: center;
    gap: 5vw;
}
.social-list li{
    width: 6rem;
    height: 6rem;
}

.logo-contact{
    width: 4rem;
    aspect-ratio: 1/1;
    border-radius: 20px;
    transition: transform .2s;
}
.logo-contact:hover{
    transform: scale(1.3);
}

/* Image cv */
.two section{
    width: 50%;
}

.two aside{
    width: 50%;
    height: 100%;
    /* background-color: red; */
}


.cv-img{
    height: 40vh;
}

.cv-img-link{
    transition: transform .2s;
}

.cv-img-link:hover{
    transform: scale(1.2);
}

.cv-text {
   
    color: #b9b39d;
    text-shadow: 0px 0px 2px black;
    font-size: 115px;
    font-weight: bold;
    opacity: 1;
    
    
   
}
.cv-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

/* fin image cv */

/* Quatrieme carte */
/* section de gauche width 40% */
.contact-text{
   
    font-size: 3rem;
    text-shadow: 0px 0px 3px #000;
}

/* formulaire */

.formulaire-section{
    font-size: 1.5rem;
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.formulaire-box{
    width: 80%;
    height: fit-content;
    padding: 1rem;
    border-radius: 25px;
    background-color: rgba(100, 100, 100, 0.2);
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(5px);
    box-shadow: 0 0 2px #F1FAFD;
    display: flex;
    justify-content: center;
    align-items: center; 
}
form{
    width: 80%;
}

form h2{
    font-size: 2em;
    text-align: center;
}
.inputbox{
    position: relative;
    margin: 2rem 0;
    width: 95%;
    border-bottom: 1px solid #fff;
}
.inputbox label{
    position: absolute;
    top: 50%;
    left: 5px;
    transform: translateY(-50%);
    color: #fff;
    font-size: 1em;
    pointer-events: none;
    transition: .5s;
}
input:focus ~ label, input:valid ~ label{
    top: -6px;
}
textarea:focus ~ label, textarea:valid ~ label{
    top: -13px;
}
.inputbox input, textarea{
    width: 100%;
    height: 50px;
    background: transparent;
    border: none;
    outline: none;
    font-size: 1em;
    padding: 0 35px 0 5px;
    color: #fff;

}
textarea{
    height: 80px;
}

#submit{
    width: 100%;
    height: 40px;
    border-radius: 40px;
    background: #fff;
    border: none;
    outline: none;
    cursor: pointer;
    font-size: 1em;
    font-weight: 600;
}
#submit:hover{
    background: #FFD60A;
}

.btn-check-form{
    padding-bottom: 1.5rem;
}

/* Troisième carte */

.projets_paragraphe{
    width: fit-content;
   

}

.right_section_projects{
    width: 60%;
    
}
.projects-box{
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-around;
}
.projects__img{
    width: 20vw;
    transition: transform .2s;
}
.projects__img:hover{
    transform: scale(1.2);
}

/* Footer */

footer{
    position: fixed;
    bottom: 1.5em;
    left: 39vw;
    width: fit-content;
}

footer nav ul{
    display: flex;
    gap: 1.5rem;
}
footer a {
    padding: 1px 2rem;
    border-radius: 30px;
    background-color: #535456;
    border: none;
    cursor: pointer;
}

